<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:id="@+id/parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/listify_black_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_centerInParent="true"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/listifyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/listifyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            android:layout_below="@+id/listifyTitle"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textStyle="normal"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listifyInfo"
            android:layout_marginTop="20dp"
            android:text="@string/start"
            android:layout_centerHorizontal="true"
            android:minWidth="200dp"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_listifiy_button"
            android:textSize="16sp"/>



    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/dialog"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/keyboard"
        android:visibility="gone"></RelativeLayout>

</RelativeLayout>
